--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="md:w-1/2 md:pl-12 delay-300 animate-fade-in">
-                    <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6332fdf8-fa37-4b30-b466-6075369403b1.png" alt="Team of professionals collaborating in a modern office with laptops and digital screens" class="rounded-lg shadow-2xl">
+                    <img src="1.jpg" alt="Team of professionals collaborating in a modern office with laptops and digital screens" class="rounded-lg shadow-2xl">
                 </div>
             </div>
         </div>
