--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row hero-row justify-content-center">
                 <div class="col-md-4 text-center">
-                    <img src="1.jpg" alt="Profile Photo" class="profile-pic">
+                    <img src="p.jpg" alt="Profile Photo" class="profile-pic">
                 </div>
                 <div class="col-md-8">
                     <h1 class="display-3">Krishan Knhaiya Maurya</h1>
